--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="nav">
       <ul class="nav-list">
         <li class="nav-item"><a href="./" class="nav-link current">Студия</a></li>
-        <li class="nav-item"><a href="./portfolio/portfolio.html" class="nav-link">Портфолио</a></li>
+        <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
         <li class="nav-item"><a href="#our-team" class="nav-link">Контакты</a></li>
       </ul>
     </nav>
