--- a/portfolio.html
+++ b/portfolio.html
@@ -232,7 +232,7 @@
         
             <button class="subscribe-btn"><span class="subscribe-btn-text">Подписаться</span>
               <div class="subscribe-btn-img">
-                <img src="../img/icons/icons-src/subscribe.svg" alt="Dont worry be happy"></div>
+                <img src="./img/icons/icons-src/subscribe.svg" alt="Dont worry be happy"></div>
             </button>
           </form>
         </div>
