--- a/portfolio.html
+++ b/portfolio.html
@@ -189,7 +189,7 @@
     <div class="container">
       <div class="wrapper">
         <div>
-          <a href="../index.html" class="footer-logo-link">
+          <a href="./index.html" class="footer-logo-link">
             <p class="footer-logo logo">Web<span class="footer-logo-accent">Studio</span></p>
           </a>
           <ul class="footer-contacts-list">
